# AeroHPC_A

./: .gitignore  CMakeLists.txt  README.md  boundariesBuilders.cpp  main.cpp  main.out  makefile  manufactured_sol.ipynb  periodicBoundary.ipynb  runSolver.cpp  test.cpp  testCaseInfo.txt  testDomainFunctions.cpp  testFPS.cpp  testcaseDomainFunctions.cpp
analysis/: 100NonOptAnalysis.txt  100Opt.txt  100OptAnalysis.txt  100nonOpt.txt  analysis1.txt  analysis2.txt  analysis3.txt  nonoptimized.txt  optimized.txt
fft_test/: 3d_fft_decomp.cpp  AeroHPC_A  CMakeLists.txt  N_test_fftw_vector.cpp  N_with_fft.cpp  N_with_fft_3d.cpp  Traits.hpp  info.md  poissonSolver.cpp  poissonSolver.hpp  poisson_solver_3d.cpp  poisson_solver_vector.cpp  poissonsolver.cpp  poissonsolver.hpp  poissonsolverTest.cpp  test_fftw_3d.cpp  test_fftw_vector.cpp  with_fft.cpp  without_fft.cpp
fft_test/2decomp_C/: C2Decomp.hpp  HALO_TEST  TEST  TEST_MAJORINDEXING
fft_test/PoissonSolver/: poissonSolver.hpp  poissonsolverTest.cpp
include/: Boundaries.hpp  BoundaryCondition.hpp  C2Decomp.hpp  Chronometer.hpp  Condition.hpp  Conditions.hpp  Constants.hpp  DataExporter.hpp  FFTData.hpp  ForcingTerm.hpp  GhostedSG.hpp  Grid.hpp  GridData.hpp  GridStructure.hpp  Initialization.hpp  Interpolation.hpp  L2NormCalculator.hpp  Logger.h  Logger.hpp  MPIBoundaries.hpp  MPICondition.hpp  MPITraits.hpp  Model.hpp  MomentumEquation.hpp  Operators.hpp  Parameters.hpp  PoissonSolver.hpp  PressureEquation.hpp  PressureSolver.hpp  RKData.hpp  RungeKutta.hpp  SolverData.hpp  StaggeredGrid.hpp  Traits.hpp  VTKConverter.hpp  VTKFile.hpp  chronoUtils.hpp  justfortest.hpp  macroUtils.hpp  mathUtils.hpp  (+3 more)
include/data/: BoundariesData.hpp  BoundariesFunctions.hpp  Constants.hpp  DomainData.hpp  FFTData.hpp  Parameters.hpp  RKData.hpp  SolverData.hpp  SolverInfo.hpp  SpatialFunctionsCollect.hpp
include/equations/: MomentumEquation.hpp  PressureEquation.hpp
include/utils/: Logger.hpp  chronoUtils.hpp  macroUtils.hpp  mathUtils.hpp  printBuffer.hpp
include/vtk/: VTKConverter.hpp  VTKFile.hpp
scripts/: convergence.py  fft_periodic.py  forcing_term.py  manufactured_sol.ipynb
src/: ForcingTerm.cpp  GhostedSG.cpp  Grid.cpp  GridData.cpp  L2NormCalculator.cpp  Model.cpp  PoissonSolver.cpp  RK.cpp  StaggeredGrid.cpp  Traits.cpp  VTKConverter.cpp  addressing.cpp  error.cpp  main.cpp  poissonSolver.cpp  utils.cpp
src/C2Decomp/: Alloc.cpp  Best2DGrid.cpp  C2Decomp.cpp  Halo.cpp  IO.cpp  MemSplitMerge.cpp  TransposeX2Y.cpp  TransposeY2X.cpp  TransposeY2Z.cpp  TransposeZ2Y.cpp
tests/divergence/: CMakeLists.txt  main.cpp
tests/grad_p/: CMakeLists.txt  convergence.py  main.cpp
